--- a/package.json
+++ b/package.json
@@ -11,24 +11,21 @@
     "gatsby-plugin-catch-links": "^2.1.0",
     "gatsby-plugin-feed": "^2.3.2",
     "gatsby-plugin-google-analytics": "^2.1.1",
-    "gatsby-plugin-manifest": "2.4.9",
+    "gatsby-plugin-manifest": "^2.2.1",
     "gatsby-plugin-netlify": "^2.0.13",
     "gatsby-plugin-nprogress": "^2.1.0",
     "gatsby-plugin-offline": "^2.2.1",
     "gatsby-plugin-react-helmet": "3.1.0",
     "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "2.6.9",
+    "gatsby-plugin-sharp": "2.2.12",
     "gatsby-plugin-sitemap": "2.2.1",
     "gatsby-remark-autolink-headers": "^2.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.0",
     "gatsby-remark-images": "3.1.3",
-    "gatsby-remark-images-contentful": "2.3.3",
     "gatsby-remark-prismjs": "3.3.1",
-    "gatsby-source-contentful": "^2.3.12",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-remark": "2.6.2",
-    "gatsby-transformer-sharp": "2.5.3",
-    "gatsby-transformer-sqip": "2.3.9",
+    "gatsby-transformer-sharp": "2.2.1",
     "lodash": "^4.17.13",
     "lodash.kebabcase": "^4.1.1",
     "moment": "^2.24.0",
