--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "content"]
 	path = content
-	url = https://github.com/lavinske/content.lav.my.id
+	url = git@github.com:lavinske/content.lav.my.id.git
