--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-image": "^2.2.4",
     "gatsby-plugin-catch-links": "^2.1.0",
     "gatsby-plugin-feed": "^2.3.2",
+    "gatsby-plugin-html-attributes": "*",
     "gatsby-plugin-google-analytics": "^2.1.1",
     "gatsby-plugin-manifest": "^2.2.1",
     "gatsby-plugin-netlify": "^2.0.13",
