--- a/package.json
+++ b/package.json
@@ -1,63 +1,63 @@
 {
   "name": "lav.my.id",
   "description": "Personal website running on Gatsby, React, and Node.js.",
-  "version": "1.0.0",
-  "author": "Tania Rascia",
+  "version": "3.0.0",
+  "author": "Steven Lavinske",
   "repository": "git@github.com:lavinske/lav.my.id",
   "dependencies": {
-    "eslint-utils": "^1.4.1",
-    "gatsby": "^2.13.13",
-    "gatsby-image": "^2.2.4",
-    "gatsby-plugin-catch-links": "^2.1.0",
-    "gatsby-plugin-feed": "^2.3.2",
-    "gatsby-plugin-google-analytics": "^2.1.1",
+    "eslint-utils": "^2.1.0",
+    "gatsby": "^2.30.1",
+    "gatsby-image": "^2.9.0",
+    "gatsby-plugin-catch-links": "^2.8.0",
+    "gatsby-plugin-feed": "^2.11.0",
+    "gatsby-plugin-google-analytics": "^2.9.0",
     "gatsby-plugin-html-attributes": "^1.0.5",
-    "gatsby-plugin-manifest": "^2.4.9",
-    "gatsby-plugin-netlify": "^2.0.13",
-    "gatsby-plugin-nprogress": "^2.1.0",
-    "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "3.1.0",
-    "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "^2.6.9",
-    "gatsby-plugin-sitemap": "2.2.1",
-    "gatsby-remark-autolink-headers": "^2.1.0",
-    "gatsby-remark-copy-linked-files": "^2.1.0",
-    "gatsby-remark-images": "3.1.3",
-    "gatsby-remark-prismjs": "3.3.1",
-    "gatsby-source-filesystem": "^2.0.23",
-    "gatsby-transformer-remark": "2.6.2",
-    "gatsby-transformer-sharp": "^2.5.3",
-    "lodash": "^4.17.13",
+    "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby-plugin-netlify": "^2.9.0",
+    "gatsby-plugin-nprogress": "^2.8.0",
+    "gatsby-plugin-offline": "^3.8.0",
+    "gatsby-plugin-react-helmet": "3.8.0",
+    "gatsby-plugin-sass": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.12.0",
+    "gatsby-plugin-sitemap": "2.10.0",
+    "gatsby-remark-autolink-headers": "^2.9.0",
+    "gatsby-remark-copy-linked-files": "^2.8.0",
+    "gatsby-remark-images": "3.9.0",
+    "gatsby-remark-prismjs": "3.11.0",
+    "gatsby-source-filesystem": "^2.9.0",
+    "gatsby-transformer-remark": "2.14.0",
+    "gatsby-transformer-sharp": "^2.10.0",
+    "lodash": "^4.17.20",
     "lodash.kebabcase": "^4.1.1",
-    "moment": "^2.24.0",
-    "node-sass": "^4.11.0",
-    "prismjs": "^1.15.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-github-btn": "^1.1.1",
-    "react-helmet": "^5.2.0",
+    "moment": "^2.29.1",
+    "node-sass": "^5.0.0",
+    "prismjs": "^1.23.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-github-btn": "^1.2.0",
+    "react-helmet": "^6.1.0",
     "sharp": "^0.27.0",
-    "typeface-montserrat": "0.0.75",
-    "typeface-roboto": "0.0.75",
-    "typeface-roboto-mono": "0.0.75",
-    "url-join": "^4.0.0"
+    "typeface-montserrat": "1.1.13",
+    "typeface-roboto": "1.1.13",
+    "typeface-roboto-mono": "1.1.13",
+    "url-join": "^4.0.1"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.1.0",
     "cli-glob": "^0.1.0",
-    "eslint": "^6.0.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "6.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "prettier": "^1.16.4",
-    "remark-cli": "^6.0.1",
-    "remark-preset-lint-recommended": "^3.0.1",
+    "eslint": "^7.17.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "prettier": "^2.2.1",
+    "remark-cli": "^9.0.0",
+    "remark-preset-lint-recommended": "^5.0.0",
     "stylefmt": "^6.0.3",
-    "stylelint": "^10.1.0",
-    "stylelint-config-standard": "^18.0.0",
-    "write-good": "^1.0.1"
+    "stylelint": "^13.8.0",
+    "stylelint-config-standard": "^20.0.0",
+    "write-good": "^1.0.4"
   },
   "keywords": [
     "steven lavinske",
@@ -68,7 +68,9 @@
     "articles",
     "blog"
   ],
-  "resolutions": { "sharp": "0.27.0" },
+  "resolutions": {
+    "sharp": "0.27.0"
+  },
   "license": "MIT",
   "main": "n/a",
   "scripts": {
